@@ -20,7 +20,8 @@ package se.inera.intyg.common.pdf.model;
 
 import com.itextpdf.layout.element.Div;
 import com.itextpdf.layout.element.Paragraph;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 import se.inera.intyg.common.pdf.renderer.UVRenderer;
 
 /**
