@@ -20,10 +20,13 @@ package se.inera.intyg.common.pdf.model;
 
 import com.itextpdf.layout.element.Div;
 import com.itextpdf.layout.element.Paragraph;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
+import se.inera.intyg.common.pdf.renderer.UVRenderer;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 import se.inera.intyg.common.pdf.renderer.UVRenderer;
 
 /**
